--- a/views/home/home.html
+++ b/views/home/home.html
@@ -39,7 +39,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Intitulé</th>
                     <th scope="col">Valeur</th>
-                    <th scope="col">Actions</th>
+                    <th scope="col" hidden>Actions</th>
                 </tr>
                 </thead>
                 <tbody id="expenses-table">
@@ -62,7 +62,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Intitulé</th>
                     <th scope="col">Valeur</th>
-                    <th scope="col">Actions</th>
+                    <th scope="col" hidden>Actions</th>
                 </tr>
                 </thead>
                 <tbody id="profits-table">
